	Replace a pair of assert() statements with a flag that prevents mouse
	interaction from further increasing the value of surface_zscale. This
	means you cannot trigger the error condition the asserts tried to guard 
	against just by moving the mouse.  You can still trigger it by setting
	the view parameters to something odd, but the patch of 2008-05-29 may
	handle that. 
	Bug #172806

2008-06-02  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/term-ja.diff docs/gnuplot-ja.doc:
	Sync Japanese documentation to gnuplot.doc revision 1.506

2008-06-02  Tim Hoffmann  <t_hoffmann@users.sourceforge.net>

	* src/win/wtext.c (WndParentProc): Account for scrollbars when shrinking
	the textwin to the maximally needed width. SF Patch #1971437.

2008-06-01  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_image):  Unpack RGBA data.
	Cairo uses a pre-multiplied alpha convention.

2008-06-01  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/gd.trm (PNG_image): Manually resize input image and
	alpha blend so that palette colors aren't consumed unnecessarily.

	* term/x11.trm (X11_image) src/gplt_x11.c (exec_cmd, X11_GR_IMAGE):
	Handle alpha channel by blending with existing image contents for
	AllPlanes, otherwise background is not included (i.e. value equals zero)
	making blending too dark.

2008-06-01  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc:  New image plotting style 'with rgbalpha', requiring
	four values (r,g,b,alpha) per input pixel. Each component lies in the
	range [0:255].  Only a few terminals (cairo gd x11) support a true alpha
	channel with partial transparency, but we provide terminal-independent
	code that allows using the alpha channel as an all-or-nothing mask.

	* src/datafile.c (avs_filetype_function): Handle AVS file alpha channel.
	(df_bin_default_columns): Add RGBA_IMAGE with default 4 columns info.

	* src/gp_types.h: Add RGBA_IMAGE plot style, define alpha coord CRD_A.
